--- a/config/packages/translation.yaml
+++ b/config/packages/translation.yaml
@@ -1,7 +1,9 @@
 framework:
-    default_locale: '%locale%'
+    default_locale: 'fr'
     translator:
         paths:
             - '%kernel.project_dir%/translations'
         fallbacks:
-            - '%locale%'
+            - 'fr_FR'
+
+    
