--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,7 +4,9 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
-    locale: 'en'
+    locale: 'fr'
+    app.locales: fr|en
+    avatar_directory: '%kernel.project_dir%/public/uploads/avatar'
 
 services:
     # default configuration for services in *this* file
@@ -20,6 +22,9 @@ services:
     App\:
         resource: '../src/*'
         exclude: '../src/{DependencyInjection,Entity,Migrations,Tests,Kernel.php}'
+    App\Service\FileUploader:
+        arguments:
+            $targetDirectory: '%avatar_directory%'
 
     # controllers are imported separately to make sure services can be injected
     # as action arguments even if you don't extend any base controller class
@@ -29,3 +34,4 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    
